# RealityEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CompileProjectShaders.bat  GenerateVisualStudioFiles.bat  README.md  RealityEngine.cpp  RealityEngine.sln  RealityEngine.vcxproj  RealityEngine.vcxproj.filters  Resource.h  Setup.bat  compile_shaders.bat  imgui.ini  premake5.lua
EOC/: premake5.lua
EOC/Source/: main.cpp
Engine/: GraphicsContextManager.cpp  GraphicsContextManager.h  GraphicsDescriptor.h  GraphicsInterface.h  RealityEngine.vcxproj  RealityEngine.vcxproj.filters  imgui.ini  premake5.lua
Engine/Source/: Application.cpp  Application.h  CoreLog.cpp  CoreLog.h  RealityEngine.cpp  RealityEngine.rc  Window.cpp  Window.h  main.cpp
Engine/Source/GameFrameworks/: Character.h  Entity.h  Object.h  Pawn.h
Engine/Source/GameFrameworks/Components/: CharacterMovementComponent.h  Component.h
Engine/Source/GameFrameworks/Systems/: System.h
Engine/Source/Runtime/: Applications.cpp  Applications.h  EditorUI.cpp  EditorUI.h  Engine.cpp  Engine.h  ImGuiLayer.cpp  ImGuiLayer.h  Launch.cpp  TriangleRenderer.cpp  TriangleRenderer.h  ViewportRenderer.cpp  ViewportRenderer.h  VulkanContext.cpp  VulkanContext.h
Engine/Source/Window/: Window.cpp  Window.h
Games/EraOfChange/: EraOfChange.vcxproj
logs/: engine_log.txt
samples/: CMakeLists.txt  win32_entry.cpp
scripts/: Setup.py  SetupPremake.py  Win-GenProjects.bat
srcs/engine/: CMakeLists.txt
srcs/engine/core/: typedef.h
srcs/engine/window/: window.cpp  window.h
